--- a/binding/python/pyproject.toml
+++ b/binding/python/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["maturin>=1.8,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "ipms_py"
-requires-python = ">=3.8"
+name = "synlink_py"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
@@ -18,6 +18,6 @@ testing = []
 
 [tool.maturin]
 python-source = "py"
-module-name = "ipms._ipms_rs"
+module-name = "synlink._synlink_rs"
 bindings = 'pyo3'
 features = ["pyo3/extension-module"]
