--- a/binding/python/pyproject.toml
+++ b/binding/python/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "maturin"
 [project]
 name = "synlink"
 authors = [{ name = 'Luca Vivona', email = "lucavivona01@gmail.com" }]
+description = "p2p hosting registery framework of deep learning model over the web."
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -15,10 +16,18 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-     "Typing :: Typed",
+    "Typing :: Typed",
 ]
 dynamic = ["version"]
 readme = { file = "../../README.md", content-type = "text/markdown" }
+dependencies = [
+    "multiaddr>=0.0.9",
+    "py-multihash>=2.0.1",
+    "base58>=2.1.1",
+    "PyNaCl>=1.5.0",
+    "cryptography>=45.0.5",
+    "typing-extensions<=4.14.1",
+]
 
 [project.optional-dependencies]
 quality = [
@@ -27,15 +36,8 @@ quality = [
     "isort>=5.5.4",
     "flake8>=3.8.3",
 ]
-testing = [
-    "pytest>=7.2.0",
-    "pytest-benchmark>=4.0.0",
-    "hypothesis>=6.70.2",
-]
-fuzzing = [
-    "synlink[testing]",
-    "atheris>=2.3.0"
-]
+testing = ["pytest>=7.2.0", "pytest-benchmark>=4.0.0", "hypothesis>=6.70.2"]
+fuzzing = ["synlink[testing]", "atheris>=2.3.0"]
 
 [tool.maturin]
 python-source = "py"
